--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -20,9 +20,9 @@
       .container
         .content
           .row
-            .span4
+            .span2
               = render 'sidebar'
-            .span8
+            .span10#stage
               = render 'layouts/messages'
               = yield
           %footer
