reordered _market_post partial

--- a/app/views/merchandises/show.html.haml
+++ b/app/views/merchandises/show.html.haml
@@ -2,10 +2,10 @@
   %thead
     %tr
       %th Date
-      %th Item
       %th Price
-      %th Player
+      %th Stock
+      %th Player ID
       %th Country
-  %tr
+      %th Item
   = render @posts
 
