--- a/app/views/market_posts/_market_post.html.haml
+++ b/app/views/market_posts/_market_post.html.haml
@@ -1,7 +1,8 @@
 %tr
   %td= market_post.record_date
-  %td= market_post.merchandise
   %td= market_post.price
+  %td= market_post.stock
   %td= market_post.provider
   %td= market_post.country
+  %td= market_post.merchandise
 
