--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -22,7 +22,7 @@
           .row
             .span2
               = render 'sidebar'
-            .span10#stage
+            .span10
               = render 'layouts/messages'
               = yield
           %footer
