added google analytics and adsense

--- a/app/views/application/_sidebar.html.haml
+++ b/app/views/application/_sidebar.html.haml
@@ -1,5 +1,9 @@
 - @merc ||= nil
 - @country ||= nil
+.well
+  :plain
+    <script type="text/javascript"><!-- google_ad_client = "ca-pub-8714925533614355"; /* eRepublic Side Add */ google_ad_slot = "0365178516";
+      google_ad_width = 120; google_ad_height = 240;//--> </script>
 .well#merc_selection
   - @mercs.each do |c|
     %label.radio
